--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,25 +8,26 @@
         "eject": "expo eject"
     },
     "dependencies": {
-        "@react-native-community/masked-view": "0.1.5",
+        "@react-native-community/masked-view": "^0.1.5",
         "@react-navigation/native": "^5.0.9",
         "@react-navigation/stack": "^5.1.1",
         "expo": "~36.0.0",
         "react": "~16.9.0",
         "react-dom": "~16.9.0",
         "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-        "react-native-gesture-handler": "~1.5.0",
-        "react-native-reanimated": "~1.4.0",
-        "react-native-safe-area-context": "0.6.0",
-        "react-native-screens": "2.0.0-alpha.12",
+        "react-native-gesture-handler": "^1.5.6",
+        "react-native-reanimated": "^1.4.0",
+        "react-native-safe-area-context": "^0.6.0",
+        "react-native-screens": "^2.0.0-alpha.12",
+        "react-native-status-bar-height": "^2.4.0",
         "react-native-web": "~0.11.7",
         "react-redux": "^7.2.0",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8"
     },
     "devDependencies": {
-        "babel-preset-expo": "~8.0.0",
-        "@babel/core": "^7.0.0"
+        "@babel/core": "^7.0.0",
+        "babel-preset-expo": "~8.0.0"
     },
     "private": true
 }
