--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,10 @@
         "react-navigation-header-buttons": "^3.0.5",
         "react-redux": "^7.2.0",
         "redux": "^4.0.5",
-        "redux-devtools-extension": "^2.13.8"
+        "redux-devtools-extension": "^2.13.8",
+        "expo-camera": "~8.0.0",
+        "expo-image-picker": "~8.0.1",
+        "expo-permissions": "~8.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.0.0",
