--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,13 @@
         "@react-navigation/native": "^5.0.9",
         "@react-navigation/stack": "^5.1.1",
         "expo": "~36.0.0",
+        "expo-camera": "~8.0.0",
+        "expo-image-picker": "~8.0.1",
+        "expo-permissions": "~8.0.0",
         "react": "~16.9.0",
         "react-dom": "~16.9.0",
         "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+        "react-native-bouncing-preloader": "^1.0.1",
         "react-native-gesture-handler": "^1.5.6",
         "react-native-reanimated": "^1.4.0",
         "react-native-safe-area-context": "^0.6.0",
@@ -25,10 +29,7 @@
         "react-navigation-header-buttons": "^3.0.5",
         "react-redux": "^7.2.0",
         "redux": "^4.0.5",
-        "redux-devtools-extension": "^2.13.8",
-        "expo-camera": "~8.0.0",
-        "expo-image-picker": "~8.0.1",
-        "expo-permissions": "~8.0.0"
+        "redux-devtools-extension": "^2.13.8"
     },
     "devDependencies": {
         "@babel/core": "^7.0.0",
