--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
         "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
         "react-native-bouncing-preloader": "^1.0.1",
         "react-native-gesture-handler": "^1.5.6",
+        "react-native-keyboard-aware-scrollview": "^2.1.0",
         "react-native-reanimated": "^1.4.0",
         "react-native-safe-area-context": "^0.6.0",
         "react-native-screens": "^2.0.0-alpha.12",
@@ -29,7 +30,8 @@
         "react-navigation-header-buttons": "^3.0.5",
         "react-redux": "^7.2.0",
         "redux": "^4.0.5",
-        "redux-devtools-extension": "^2.13.8"
+        "redux-devtools-extension": "^2.13.8",
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.0.0",
