--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "expo-file-system": "~8.0.0",
         "expo-image-manipulator": "~8.0.0",
         "expo-image-picker": "~8.0.1",
+        "expo-location": "~8.0.0",
         "expo-permissions": "~8.0.0",
         "moment": "^2.24.0",
         "react": "~16.9.0",
@@ -28,14 +29,14 @@
         "react-native-reanimated": "^1.4.0",
         "react-native-safe-area-context": "^0.6.0",
         "react-native-screens": "^2.0.0-alpha.12",
+        "react-native-snackbar-component": "^1.1.8",
         "react-native-status-bar-height": "^2.4.0",
         "react-native-web": "~0.11.7",
         "react-navigation-header-buttons": "^3.0.5",
         "react-redux": "^7.2.0",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
-        "redux-thunk": "^2.3.0",
-        "expo-location": "~8.0.0"
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.0.0",
