--- a/envs/prod.env
+++ b/envs/prod.env
@@ -12,6 +12,6 @@ EMAIL_HOST_USER=students@propulsionacademy.com
 EMAIL_HOST_PASSWORD=Ahsdfhj83j3h4rweeoiuhas83dbj3j3dmnvbl
 DEFAULT_FROM_EMAIL=students@propulsionacademy.com
 
-SECRET_KEY="xc$__51n^9fp&8ckzew7hly(g8@v2f20h&#rk=p=dl2bne7^w2"
+SECRET_KEY="kuv(wj^zoxcfc$04_(5m&cwx=f+yyv!6v$86s@t3op1h=gq9#k"
 
-SENTRY_DSN=https://2bc11c32055044e593c2eca836493785@sentry.io/1895515
+# SENTRY_DSN=https://2bc11c32055044e593c2eca836493785@sentry.io/1895515
