--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -34,6 +34,8 @@ server {
     add_header X-Frame-Options SAMEORIGIN;  # must not be on DENY to make iframe work!
     add_header X-Content-Type-Options nosniff;
 
+    client_body_buffer_size 10M;
+
     location /static-files/ {
         alias   /static-files/;
     }
