--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
     "name": "Lepi",
-    "slug": "frontend",
-    "privacy": "public",
+    "slug": "Lepi-App",
+    "privacy": "unlisted",
     "sdkVersion": "36.0.0",
     "platforms": [
       "ios",
@@ -24,7 +24,13 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.propulsion.lepitest",
+      "buildNumber": "1.0.0",
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.propulsion.lepitest",
+      "versionCode": 1
     }
   }
 }
