Added max body size 10MB

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -51,6 +51,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
         client_body_temp_path /tmp 1 2;
+        client_max_body_size 10M;
 
         resolver 127.0.0.11;  # docker embedded DNS server
         set $target http://backend:8000;  # resolve during runtime rather than during startup
