--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "expo-image-picker": "~8.0.1",
         "expo-location": "~8.0.0",
         "expo-permissions": "~8.0.0",
+        "expo-web-browser": "~8.0.0",
         "moment": "^2.24.0",
         "react": "~16.9.0",
         "react-dom": "~16.9.0",
