--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
-        "sentry-expo": "^2.0.3"
+        "sentry-expo": "^2.0.3",
+        "@react-native-community/netinfo": "4.6.0"
     },
     "devDependencies": {
         "@babel/core": "^7.0.0",
