--- a/envs/dev.env
+++ b/envs/dev.env
@@ -14,4 +14,4 @@ DEFAULT_FROM_EMAIL=students@propulsionacademy.com
 
 SECRET_KEY="xc$__51n^9fp&8ckzew7hly(g8@v2f20h&#rk=p=dl2bne7^w2"
 
-SENTRY_DSN=https://2bc11c32055044e593c2eca836493785@sentry.io/1895515
+SENTRY_DSN=https://54454fc36eac49cdb6b13bdbb72f4ede@o344553.ingest.sentry.io/5216249
