--- a/envs/prod.env
+++ b/envs/prod.env
@@ -14,4 +14,4 @@ DEFAULT_FROM_EMAIL=students@propulsionacademy.com
 
 SECRET_KEY="kuv(wj^zoxcfc$04_(5m&cwx=f+yyv!6v$86s@t3op1h=gq9#k"
 
-# SENTRY_DSN=https://2bc11c32055044e593c2eca836493785@sentry.io/1895515
+SENTRY_DSN=https://54454fc36eac49cdb6b13bdbb72f4ede@o344553.ingest.sentry.io/5216249
