--- a/envs/dev.env
+++ b/envs/dev.env
@@ -1,7 +1,7 @@
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_USER=lepi-ps
+POSTGRES_PASSWORD=lepi-ps
 POSTGRES_DB=postgres
 DJANGO_DEBUG=True
 
