--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,51 +1,51 @@
 {
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "eject": "expo eject"
-    },
-    "dependencies": {
-        "@react-native-community/masked-view": "^0.1.5",
-        "@react-native-community/netinfo": "4.6.0",
-        "@react-navigation/drawer": "^5.1.1",
-        "@react-navigation/native": "^5.0.9",
-        "@react-navigation/stack": "^5.1.1",
-        "expo": "~36.0.0",
-        "expo-camera": "~8.0.0",
-        "expo-file-system": "~8.0.0",
-        "expo-image-crop": "^1.0.4",
-        "expo-image-manipulator": "~8.0.0",
-        "expo-image-picker": "~8.0.1",
-        "expo-location": "~8.0.0",
-        "expo-permissions": "~8.0.0",
-        "expo-web-browser": "~8.0.0",
-        "moment": "^2.24.0",
-        "react": "~16.9.0",
-        "react-dom": "~16.9.0",
-        "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-        "react-native-bouncing-preloader": "^1.0.1",
-        "react-native-gesture-handler": "^1.5.6",
-        "react-native-keyboard-aware-scrollview": "^2.1.0",
-        "react-native-reanimated": "^1.4.0",
-        "react-native-safe-area-context": "^0.6.0",
-        "react-native-screens": "^2.0.0-alpha.12",
-        "react-native-snackbar-component": "^1.1.8",
-        "react-native-status-bar-height": "^2.4.0",
-        "react-native-svg": "9.13.3",
-        "react-native-web": "~0.11.7",
-        "react-navigation-header-buttons": "^3.0.5",
-        "react-redux": "^7.2.0",
-        "redux": "^4.0.5",
-        "redux-devtools-extension": "^2.13.8",
-        "redux-thunk": "^2.3.0",
-        "sentry-expo": "^2.0.3"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.0.0",
-        "babel-preset-expo": "~8.0.0"
-    },
-    "private": true
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
+  },
+  "dependencies": {
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/netinfo": "5.5.1",
+    "@react-navigation/drawer": "^5.1.1",
+    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
+    "expo": "^37.0.0",
+    "expo-camera": "~8.2.0",
+    "expo-file-system": "~8.1.0",
+    "expo-image-crop": "^1.0.4",
+    "expo-image-manipulator": "~8.1.0",
+    "expo-image-picker": "~8.1.0",
+    "expo-location": "~8.1.0",
+    "expo-permissions": "~8.1.0",
+    "expo-web-browser": "~8.2.1",
+    "moment": "^2.24.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-bouncing-preloader": "^1.0.1",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-snackbar-component": "^1.1.8",
+    "react-native-status-bar-height": "^2.4.0",
+    "react-native-svg": "11.0.1",
+    "react-native-web": "^0.11.7",
+    "react-navigation-header-buttons": "^3.0.5",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "sentry-expo": "^2.0.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "babel-preset-expo": "^8.1.0"
+  },
+  "private": true
 }
