--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,34 +8,34 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.6",
-    "@react-native-community/netinfo": "5.5.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "5.9.2",
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
-    "expo": "^37.0.0",
-    "expo-camera": "~8.2.0",
-    "expo-file-system": "~8.1.0",
+    "expo": "^38.0.0",
+    "expo-camera": "~8.3.1",
+    "expo-file-system": "~9.0.1",
     "expo-image-crop": "^1.0.4",
-    "expo-image-manipulator": "~8.1.0",
-    "expo-image-picker": "~8.1.0",
-    "expo-location": "~8.1.0",
-    "expo-permissions": "~8.1.0",
-    "expo-web-browser": "~8.2.1",
+    "expo-image-manipulator": "~8.2.1",
+    "expo-image-picker": "~8.3.0",
+    "expo-location": "~8.2.1",
+    "expo-permissions": "~9.0.1",
+    "expo-web-browser": "~8.3.1",
     "moment": "^2.24.0",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-bouncing-preloader": "^1.0.1",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-snackbar-component": "^1.1.8",
     "react-native-status-bar-height": "^2.4.0",
-    "react-native-svg": "11.0.1",
-    "react-native-web": "^0.11.7",
+    "react-native-svg": "12.1.0",
+    "react-native-web": "~0.11.7",
     "react-navigation-header-buttons": "^3.0.5",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "^8.1.0"
+    "babel-preset-expo": "^8.2.3"
   },
   "private": true
 }
