--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,33 +9,33 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "5.9.2",
+    "@react-native-community/netinfo": "5.9.6",
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
-    "expo": "^38.0.0",
-    "expo-camera": "~8.3.1",
-    "expo-file-system": "~9.0.1",
+    "expo": "^39.0.0",
+    "expo-camera": "~9.0.0",
+    "expo-file-system": "~9.2.0",
     "expo-image-crop": "^1.0.4",
-    "expo-image-manipulator": "~8.2.1",
-    "expo-image-picker": "~8.3.0",
-    "expo-location": "~8.2.1",
-    "expo-permissions": "~9.0.1",
-    "expo-web-browser": "~8.3.1",
+    "expo-image-manipulator": "~8.3.0",
+    "expo-image-picker": "~9.1.0",
+    "expo-location": "~9.0.0",
+    "expo-permissions": "~9.3.0",
+    "expo-web-browser": "~8.5.0",
     "moment": "^2.24.0",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-bouncing-preloader": "^1.0.1",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-snackbar-component": "^1.1.8",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-svg": "12.1.0",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "~0.13.7",
     "react-navigation-header-buttons": "^3.0.5",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "^8.2.3"
+    "babel-preset-expo": "^8.3.0"
   },
   "private": true
 }
