--- a/frontend/app.json
+++ b/frontend/app.json
@@ -7,8 +7,7 @@
       "ios",
       "android"
     ],
-    "version": "1.0.9"
-
+    "version": "1.0.9",
     "orientation": "default",
     "icon": "./assets/icon.png",
     "splash": {
@@ -29,7 +28,7 @@
     },
     "android": {
       "package": "ch.ethz.biodex",
-      "versionCode": 1.9,
+      "versionCode": 2,
       "permissions": [
         "ACCESS_FINE_LOCATION",
         "CAMERA",
