delete redundant file. same as icon.png

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -11,7 +11,7 @@
     "orientation": "default",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/BioDex_logo_name_whitebackground.png",
+      "image": "./assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
